# aead-io

./: Cargo.toml
src/: lib.rs  reader.rs  writer.rs
